<resources>
    <string name="app_name">TealiumAdjust</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="track_purchase">Track Purchase</string>
    <string name="second_page_text">Second Page</string>
    <string name="param_name">Param Name</string>
    <string name="param_value">Param Value</string>
    <string name="add_callback">Add Callback</string>
    <string name="add_partner">Add Partner</string>
    <string name="ecommerce">E-Commerce</string>
    <string name="track_subscription">Track Subscription</string>
    <string name="track_ad_revenue">Track Ad Revenue</string>
    <string name="track_deeplink">Trigger Deep Link</string>
    <string name="session_parameters">Session Parameters</string>
    <string name="events">Events</string>
    <string name="event">Event</string>
    <string name="opt_out">Opt-Out</string>
    <string name="event_w_params">Event w/ Params</string>
    <string name="opt_in">Opt-In</string>
    <string name="consent_options">Consent Options</string>
    <string name="configuration">Configuration</string>
    <string name="disable_sdk">Disable SDK</string>
    <string name="toggle_offline">Toggle Offline</string>
</resources>